<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/create_desc"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="@string/famous_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/dark_gray" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@color/dark_gray" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColorHint="@color/dark_gray" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_gray" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_gray" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:gravity="center"
            app:ccp_defaultNameCode="US"
            app:ccp_showFullName="true" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="@color/dark_gray" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_red_button"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_already_have_account_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/already_have_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/tv_already_have_account_desc"
                android:text="@string/already_have_account_sign_in"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>