<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_have_account_sign_in"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="@string/username_phone"
            android:inputType="textPersonName"
            android:textColorHint="@color/dark_gray" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_gray" />


        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_red_button"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>